add paper description analysis

--- a/Arxiv harvest.ipynb
+++ b/Arxiv harvest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
     "    df = pd.DataFrame(columns=(\"title\", \"abstract\", \"categories\", \"created\", \"id\", \"doi\"))\n",
     "    base_url = \"http://export.arxiv.org/oai2?verb=ListRecords&\"\n",
     "    url = (base_url +\n",
-    "           \"from=2016-10-01&until=2016-10-30&\" +\n",
+    "           \"from=2012-01-01&until=2012-12-31&\" +\n",
     "           \"metadataPrefix=arXiv&set=%s\"%arxiv)\n",
     "    \n",
     "    while True:\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -109,15 +109,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&from=2016-10-01&until=2016-10-30&metadataPrefix=arXiv&set=cs\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&from=2012-01-01&until=2012-12-31&metadataPrefix=arXiv&set=cs\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|1001\n",
       "Got 503. Retrying after 20 seconds.\n",
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&from=2016-10-01&until=2016-10-30&metadataPrefix=arXiv&set=cs\n",
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1417915|1001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|1001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|2001\n",
       "Got 503. Retrying after 20 seconds.\n",
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1417915|1001\n",
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1417915|2001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|2001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|3001\n",
       "Got 503. Retrying after 20 seconds.\n",
-      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1417915|2001\n"
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|3001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|4001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|4001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|5001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|5001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|6001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|6001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|7001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|7001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|8001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|8001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|9001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|9001\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|10001\n",
+      "Got 503. Retrying after 20 seconds.\n",
+      "fetching http://export.arxiv.org/oai2?verb=ListRecords&resumptionToken=1430452|10001\n"
      ]
     }
    ],
@@ -127,107 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>abstract</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>created</th>\n",
-       "      <th>id</th>\n",
-       "      <th>doi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A O(n^8) X O(n^7) Linear Programming Model of ...</td>\n",
-       "      <td>In this paper, we present a new linear program...</td>\n",
-       "      <td>[cs.DM]</td>\n",
-       "      <td>2008-03-30</td>\n",
-       "      <td>0803.4354</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Linear Programming Formulation of the Boolean ...</td>\n",
-       "      <td>In this paper, we present a new, graph-based m...</td>\n",
-       "      <td>[cs.DM, cs.CC]</td>\n",
-       "      <td>2008-08-25</td>\n",
-       "      <td>0808.3386</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Pseudorandom Generators Against Advised Contex...</td>\n",
-       "      <td>Pseudorandomness has played a central role in ...</td>\n",
-       "      <td>[cs.FL, cs.CC]</td>\n",
-       "      <td>2009-02-16</td>\n",
-       "      <td>0902.2774</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Unified Compression-Based Acceleration of Edit...</td>\n",
-       "      <td>The edit distance problem is a classical funda...</td>\n",
-       "      <td>[cs.DS]</td>\n",
-       "      <td>2010-04-07</td>\n",
-       "      <td>1004.1194</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PCA 4 DCA: The Application Of Principal Compon...</td>\n",
-       "      <td>As one of the newest members in the field of a...</td>\n",
-       "      <td>[cs.AI, cs.NE]</td>\n",
-       "      <td>2010-04-20</td>\n",
-       "      <td>1004.3460</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0  A O(n^8) X O(n^7) Linear Programming Model of ...   \n",
-       "1  Linear Programming Formulation of the Boolean ...   \n",
-       "2  Pseudorandom Generators Against Advised Contex...   \n",
-       "3  Unified Compression-Based Acceleration of Edit...   \n",
-       "4  PCA 4 DCA: The Application Of Principal Compon...   \n",
-       "\n",
-       "                                            abstract      categories  \\\n",
-       "0  In this paper, we present a new linear program...         [cs.DM]   \n",
-       "1  In this paper, we present a new, graph-based m...  [cs.DM, cs.CC]   \n",
-       "2  Pseudorandomness has played a central role in ...  [cs.FL, cs.CC]   \n",
-       "3  The edit distance problem is a classical funda...         [cs.DS]   \n",
-       "4  As one of the newest members in the field of a...  [cs.AI, cs.NE]   \n",
-       "\n",
-       "     created         id   doi  \n",
-       "0 2008-03-30  0803.4354  None  \n",
-       "1 2008-08-25  0808.3386  None  \n",
-       "2 2009-02-16  0902.2774  None  \n",
-       "3 2010-04-07  1004.1194  None  \n",
-       "4 2010-04-20  1004.3460  None  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "df.to_csv('papers_2012.csv', encoding = 'UTF-8')"
    ]
   },
   {
