updates to arxiv-bow

--- a/arxiv-bow.ipynb
+++ b/arxiv-bow.ipynb
@@ -2,24 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2016-11-11 19:29:06,352 : INFO : 'pattern' package found; tag filters are available for English\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
     "\n",
     "from gensim import corpora\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
     "\n",
     "import csv\n",
     "from six import iteritems"
@@ -29,50 +24,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up the dictionary by reading from the corpus in a memory-efficient way"
+    "## create and save the dictionary\n",
+    "This is the mapping from words to their id's. It's the lookup table for features."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2016-11-11 19:29:06,458 : INFO : adding document #0 to Dictionary(0 unique tokens: [])\n",
-      "2016-11-11 19:29:07,560 : INFO : built Dictionary(38074 unique tokens: [u'considered,', u'considered.', u'homomorphism', u'(mcda),', u'(qoe)']...) from 2851 documents (total 449011 corpus positions)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# choose some simple stop word list\n",
-    "stoplist = set('for a of the and to in'.split())\n",
-    "\n",
+    "tokenizer = RegexpTokenizer('\\w+|\\$[\\d\\.]+|\\S+')\n",
+    "stops = [word for word in stopwords.words('english')]\n",
+    "stops += [\"=\", \"->\", \".\", \",\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# make the dictionary, a collection of statistics about all tokens in the corpus\n",
-    "dictionary = corpora.Dictionary(line.lower().split() for line in open('./datasets/corpus.csv'))"
+    "dictionary = corpora.Dictionary(tokenizer.tokenize(line) for line in open('./datasets/corpus.csv'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [tutorial](https://github.com/RaRe-Technologies/gensim/blob/develop/docs/notebooks/Corpora_and_Vector_Spaces.ipynb) includes this step. I assume it makes the bag-of-words perform better."
+    "The [tutorial](https://github.com/RaRe-Technologies/gensim/blob/develop/docs/notebooks/Corpora_and_Vector_Spaces.ipynb) includes this step. I assume it makes the bag-of-words perform better down the line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# find stop words and words that appear only once\n",
-    "stop_ids = [dictionary.token2id[stopword] for stopword in stoplist \n",
+    "stop_ids = [dictionary.token2id[stopword] for stopword in stops \n",
     "            if stopword in dictionary.token2id]\n",
     "once_ids = [tokenid for tokenid, docfreq in iteritems(dictionary.dfs) if docfreq == 1]\n",
     "\n",
@@ -84,6 +81,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dictionary.save('./datasets/corpus.dict')  # store the dictionary, for future reference"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -115,25 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "arxiv_bow = BOW() # doesn't load the corpus into memory!"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for vector in arxiv_bow:  # load one vector into memory at a time\n",
-    "    print(vector)"
+    "arxiv_bow = BOW()\n",
+    "corpora.MmCorpus.serialize('./datasets/corpus.mm', arxiv_bow)  # store to disk, for later use"
    ]
   },
   {
@@ -145,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -164,33 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(2560, 1), (2564, 2), (2566, 1), (3446, 1), (12277, 1)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_doc = \"all partial results results illustrated entropy\"\n",
     "new_vec = dictionary.doc2bow(new_doc.lower().split())\n",
     "print(new_vec)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
