--- a/Arxiv harvest.ipynb
+++ b/Arxiv harvest.ipynb
@@ -118,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('./datasets/papers_2012.csv', encoding = 'UTF-8')"
+    "df.to_csv('./data/papers_2012.csv', encoding = 'UTF-8')"
    ]
   },
   {
