--- a/arxiv-bow.ipynb
+++ b/arxiv-bow.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# make the dictionary, a collection of statistics about all tokens in the corpus\n",
-    "dictionary = corpora.Dictionary(tokenizer.tokenize(line) for line in open('./datasets/corpus.csv'))"
+    "dictionary = corpora.Dictionary(tokenizer.tokenize(line) for line in open('./data/corpus.csv'))"
    ]
   },
   {
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "dictionary.save('./datasets/corpus.dict')  # store the dictionary, for future reference"
+    "dictionary.save('./data/corpus.dict')  # store the dictionary, for future reference"
    ]
   },
   {
@@ -109,7 +109,7 @@
     "# memory-friendly bag-of-words\n",
     "class BOW(object):\n",
     "    def __iter__(self):\n",
-    "        for line in open('./datasets/corpus.csv'):\n",
+    "        for line in open('./data/corpus.csv'):\n",
     "            # assume there's one document per line, tokens separated by whitespace\n",
     "            yield dictionary.doc2bow(line.lower().split())"
    ]
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "arxiv_bow = BOW()\n",
-    "corpora.MmCorpus.serialize('./datasets/corpus.mm', arxiv_bow)  # store to disk, for later use"
+    "corpora.MmCorpus.serialize('./data/corpus.mm', arxiv_bow)  # store to disk, for later use"
    ]
   },
   {
