updated data and moved things to py files

--- a/LSA.ipynb
+++ b/LSA.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "from gensim import corpora, models, similarities\n",
     "\n",
-    "dictionary = corpora.Dictionary.load('datasets/corpus.dict')\n",
-    "corpus = corpora.MmCorpus('datasets/corpus.mm')"
+    "dictionary = corpora.Dictionary.load('data/corpus-abstracts.dict')\n",
+    "corpus = corpora.MmCorpus('data/corpus-abstracts.mm')"
    ]
   },
   {
@@ -88,9 +88,18 @@
    },
    "outputs": [],
    "source": [
-    "lsi.save('./data/model.lsi') # same for tfidf, lda, ...\n",
-    "lsi = models.LsiModel.load('./data/model.lsi')"
+    "lsi.save('./data/corpus-model.lsi') # same for tfidf, lda, ...\n",
+    "lsi = models.LsiModel.load('./data/corpus-model.lsi')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
